# librespot

./: Cargo.toml
playback/: Cargo.toml
playback/src/audio_backend/: cpal.rs  mod.rs  rodio.rs
protocol/: Cargo.toml  build.rs
protocol/src/: authentication.rs  keyexchange.rs  lib.rs  mercury.rs  metadata.rs  pubsub.rs  spirc.rs
src/: main.rs
