[package]
name = "librespot-playback"
version = "0.1.0"
authors = ["Sasha Hilton <sashahilton00@gmail.com>"]

[dependencies.librespot-audio]
path = "../audio"
[dependencies.librespot-core]
path = "../core"
[dependencies.librespot-metadata]
path = "../metadata"

[dependencies]
futures = "0.1.8"
log = "0.3.5"
byteorder = "1.2.1"

alsa            = { version = "0.2.1", optional = true }
portaudio-rs    = { version = "0.3.0", optional = true }
libpulse-sys    = { version = "0.0.0", optional = true }
jack            = { version = "0.5.3", optional = true }
libc            = { version = "0.2", optional = true }
cpal            = { git = "https://github.com/tomaka/cpal", optional = true }
sample          = { version = "0.10.0", optional = true }
sdl2            = { version = "0.32", optional = true }

[features]
alsa-backend = ["alsa"]
portaudio-backend = ["portaudio-rs"]
pulseaudio-backend = ["libpulse-sys", "libc"]
jackaudio-backend = ["jack"]
cpal-backend = ["cpal", "sample"]
sdl-backend = ["sdl2"]
